{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 209,
  "lineage": "5090a752-4bf0-4f87-6bf7-9f3701549083",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "tf_main_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-07484efa9c3da7e93",
            "id": "rtb-07484efa9c3da7e93",
            "owner_id": "854301852245",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-061432d6f2f60bd8e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf_main_table"
            },
            "vpc_id": "vpc-0cbf7b4d41b491700"
          },
          "dependencies": [
            "aws_internet_gateway.tf_gw",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:854301852245:internet-gateway/igw-061432d6f2f60bd8e",
            "id": "igw-061432d6f2f60bd8e",
            "owner_id": "854301852245",
            "tags": {
              "Name": "tf_gw"
            },
            "vpc_id": "vpc-0cbf7b4d41b491700"
          },
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "tf-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:854301852245:loadbalancer/app/tf-lb/dd0a3ad7ad708228",
            "arn_suffix": "app/tf-lb/dd0a3ad7ad708228",
            "dns_name": "tf-lb-483876410.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:854301852245:loadbalancer/app/tf-lb/dd0a3ad7ad708228",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb",
            "security_groups": [
              "sg-0cee107621fdcd02c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02a88b6188f5783cb"
              },
              {
                "subnet_id": "subnet-0cc3b42daebfeda51"
              }
            ],
            "subnets": [
              "subnet-02a88b6188f5783cb",
              "subnet-0cc3b42daebfeda51"
            ],
            "vpc_id": "vpc-0cbf7b4d41b491700",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.tf_sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tf_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:854301852245:listener/app/tf-lb/dd0a3ad7ad708228/53c47e01dbf94af2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:854301852245:targetgroup/tf-tg/9f35974b7c9494e3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:854301852245:listener/app/tf-lb/dd0a3ad7ad708228/53c47e01dbf94af2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:854301852245:loadbalancer/app/tf-lb/dd0a3ad7ad708228",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.tf-lb",
            "aws_lb_target_group.tf-tg",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tf-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:854301852245:targetgroup/tf-tg/9f35974b7c9494e3",
            "arn_suffix": "targetgroup/tf-tg/9f35974b7c9494e3",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:854301852245:targetgroup/tf-tg/9f35974b7c9494e3",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tf-tg"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0cbf7b4d41b491700"
          },
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tf_tga_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tf_tga_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tf_tga_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:854301852245:security-group/sg-0cee107621fdcd02c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cee107621fdcd02c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf_sg",
            "name_prefix": "",
            "owner_id": "854301852245",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0cbf7b4d41b491700"
          },
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:854301852245:subnet/subnet-02a88b6188f5783cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02a88b6188f5783cb",
            "map_public_ip_on_launch": true,
            "owner_id": "854301852245",
            "tags": {
              "Name": "subnet1"
            },
            "vpc_id": "vpc-0cbf7b4d41b491700"
          },
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:854301852245:subnet/subnet-0cc3b42daebfeda51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0cc3b42daebfeda51",
            "map_public_ip_on_launch": true,
            "owner_id": "854301852245",
            "tags": {
              "Name": "subnet2"
            },
            "vpc_id": "vpc-0cbf7b4d41b491700"
          },
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:854301852245:vpc/vpc-0cbf7b4d41b491700",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-090c4595d91840b1c",
            "default_route_table_id": "rtb-07484efa9c3da7e93",
            "default_security_group_id": "sg-00bf1582265637f64",
            "dhcp_options_id": "dopt-9feee9f9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0cbf7b4d41b491700",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07484efa9c3da7e93",
            "owner_id": "854301852245",
            "tags": {
              "Name": "terraform"
            }
          }
        }
      ]
    }
  ]
}